# drf_online_learning

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0002_initial.py  0003_subscribe.py  0004_alter_subscribe_options_remove_subscribe_is_active_and_more.py  0005_alter_lesson_owner.py  0006_fill_lesson_owners.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py  seed_payments.py
users/migrations/: 0001_initial.py  0002_payment.py
